--- a/index.html
+++ b/index.html
@@ -172,17 +172,7 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>About Me.</h2>
-						<p>I am a detail-oriented full stack web developer with 2 years of experience in designing, developing, analyzing, and implementing client-server and web-based applications using PHP, Laravel, CodeIgniter, JavaScript, HTML, CSS and third-party packages.
-						
-							<h3>Skills : </h3>
-							<li>OS: Windows and Mac</li>
-							<li>Proficient in Object oriented programming as well as experience with MS SQL Server, MySQL, MongoDB, Apache server, IIS and ORM frameworks</li>
-							<li>•	PHP, Node.js web development workflow using MVC approach with Vue.js, Zurb foundation, SASS, Composer, Gulp and NPM for task automation, Axios.js, Chart.js, Laravel, JSON, AJAX, eloquent ORM, stripe and PayPal express for payment processing, Bower, Motion UI, Slick carousel, Carbon php, Blade templating engine, Bootstrap, dataTables, ckeditor</li>
-							<li>GitHub</li>
-							<li>Database: MS SQL, MS Excel, MySQL, MongoDB</li>
-							<li>•	Strong understanding of HTML, CSS, CSS Flexbox, JavaScript, and Web services, Visual Studio, jQuery UI, Bootstrap, Ajax, RESTful APIs, express.js, React, WebPack</li>
-							<li>Test automation with Gulp, NPM, and Composer for dependency management</li>	
-						</p>			
+						<p>I am a detail-oriented full stack web developer with 2 years of experience in designing, developing, analyzing, and implementing client-server and web-based applications using PHP, PHP Laravel framework, PHP CodeIgniter framework, Node.js, Express.js, React, JavaScript, HTML, CSS, SASS and third-party packages.</p>			
 
 						<ul>
 							<li>Follow me on : </li>
@@ -197,13 +187,15 @@
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
 						<h3>Responsibilities</h3>
+						<ul>
 						<li>Databases: SQL, MongoDB, MySQL.</li>
 						<li>Software  Development: Node.JS,PHP, React, 3rd party  application integration, management.</li>
 						<li>Web Development:  HTML5/CSS3, JavaScript, React, Node.JS, PHP.</li>
 						<li>Manage Application Backend  Admin</li>
 						<li>Manage both front-end and back-end; database logic in MySQL, SQL, MongoDB and Installation/configuration  of  Windows  OS  and server  operating systems</li>
 						<li>Troubleshooting Production Server Problems related to web applications, disk space, file system, DNS  and network connectivity</li>
-                    </div><!-- end media -->
+						</ul>
+					</div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
         </div><!-- end container -->
